[gd_scene load_steps=16 format=2]

[ext_resource path="res://lightblue_equirectangular.png" type="Texture" id=1]
[ext_resource path="res://fonts/PixelifySans-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://FPS_project_icon.png" type="Texture" id=3]
[ext_resource path="res://RuinsThumbnail.png" type="Texture" id=4]
[ext_resource path="res://SpaceThumbnail.png" type="Texture" id=5]
[ext_resource path="res://PixelifySans-VariableFont_wght.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Main_Menu.gd" type="Script" id=7]

[sub_resource type="PanoramaSky" id=1]
radiance_size = 0
panorama = ExtResource( 1 )

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 1 )

[sub_resource type="Animation" id=3]
length = 40.0
tracks/0/type = "value"
tracks/0/path = NodePath("Camera:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 40 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 360, 360, 360 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "cam"
length = 43.0
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Camera:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 42 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 360, 360, 360 ) ]
}

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 51
outline_color = Color( 0, 1, 0.976471, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=7]
size = 36
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=8]
size = 29
font_data = ExtResource( 6 )

[node name="Main_Menu" type="Control"]
script = ExtResource( 7 )
test_scene = "res://1scenes/MainOriginal.tscn"

[node name="background" type="Spatial" parent="."]
visible = false

[node name="WorldEnvironment" type="WorldEnvironment" parent="background"]
environment = SubResource( 2 )

[node name="Camera" type="Camera" parent="background"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="background"]
autoplay = "cam"
anims/RESET = SubResource( 3 )
anims/cam = SubResource( 4 )

[node name="start_menu" type="Panel" parent="."]
margin_right = 283.0
margin_bottom = 599.0

[node name="Label" type="Label" parent="start_menu"]
margin_left = 24.0
margin_top = 27.0
margin_right = 119.0
margin_bottom = 70.0
rect_scale = Vector2( 2.52769, 2.44496 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0.74902, 0.596078, 0.596078, 1 )
custom_colors/font_color_shadow = Color( 0.196078, 1, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "My FPS Game
"

[node name="start" type="Button" parent="start_menu"]
margin_left = 33.0
margin_top = 343.0
margin_right = 121.0
margin_bottom = 363.0
rect_scale = Vector2( 2.50654, 2.19076 )
text = "Start"

[node name="options" type="Button" parent="start_menu"]
margin_left = 37.0
margin_top = 405.0
margin_right = 125.0
margin_bottom = 425.0
rect_scale = Vector2( 2.50654, 2.19076 )
text = "Options"

[node name="open_godot" type="Button" parent="start_menu"]
margin_left = 35.0
margin_top = 470.0
margin_right = 123.0
margin_bottom = 490.0
rect_scale = Vector2( 2.50654, 2.19076 )
text = "Open Godot"

[node name="quit" type="Button" parent="start_menu"]
margin_left = 36.0
margin_top = 529.0
margin_right = 124.0
margin_bottom = 549.0
rect_scale = Vector2( 2.50654, 2.19076 )
text = "Quit"

[node name="level_select_menu" type="Panel" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 7.38224, 15.0524 )

[node name="Label" type="Label" parent="level_select_menu"]
margin_left = 1.76098
margin_top = 0.797214
margin_right = 352.761
margin_bottom = 62.7972
rect_scale = Vector2( 0.105068, 0.0561914 )
custom_colors/font_color = Color( 0, 0.952941, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "Select a Level"

[node name="back" type="Button" parent="level_select_menu"]
anchor_right = 0.142
margin_left = 7.17939
margin_top = 36.2732
margin_right = 170.499
margin_bottom = 87.2732
rect_scale = Vector2( 0.159542, 0.0646532 )
custom_fonts/font = SubResource( 7 )
text = "     Back     "

[node name="ruin" type="Button" parent="level_select_menu"]
anchor_right = 0.217
margin_left = 15.5779
margin_top = 25.0458
margin_right = 106.898
margin_bottom = 125.046
rect_scale = Vector2( 0.0975582, 0.0442817 )

[node name="TextureRect" type="TextureRect" parent="level_select_menu/ruin"]
margin_left = 6.94254
margin_top = 6.00107
margin_right = 70.9425
margin_bottom = 70.0011
rect_scale = Vector2( 0.684548, 0.693345 )
texture = ExtResource( 4 )

[node name="test" type="Button" parent="level_select_menu"]
anchor_right = 0.217
margin_left = 14.9006
margin_top = 7.37422
margin_right = 106.221
margin_bottom = 107.374
rect_scale = Vector2( 0.0975582, 0.0442817 )

[node name="TextureRect" type="TextureRect" parent="level_select_menu/test"]
margin_left = 6.94254
margin_top = 6.00107
margin_right = 70.9425
margin_bottom = 70.0011
rect_scale = Vector2( 1.33332, 1.38204 )
texture = ExtResource( 3 )

[node name="space" type="Button" parent="level_select_menu"]
anchor_right = 0.217
margin_left = 14.9006
margin_top = 16.0107
margin_right = 106.221
margin_bottom = 116.011
rect_scale = Vector2( 0.0975582, 0.0442817 )

[node name="TextureRect" type="TextureRect" parent="level_select_menu/space"]
margin_left = 6.94254
margin_top = 6.00107
margin_right = 70.9425
margin_bottom = 70.0011
rect_scale = Vector2( 0.685423, 0.701351 )
texture = ExtResource( 5 )

[node name="options_menu" type="Panel" parent="."]
visible = false
margin_right = 300.0
margin_bottom = 600.0

[node name="T" type="Label" parent="options_menu"]
margin_left = 51.0
margin_top = 19.0
margin_right = 102.0
margin_bottom = 33.0
rect_scale = Vector2( 3.95349, 4.00824 )
text = "Options"

[node name="Label2" type="Label" parent="options_menu"]
margin_left = 15.0
margin_top = 131.0
margin_right = 128.0
margin_bottom = 145.0
rect_scale = Vector2( 2.39984, 2.70849 )
text = "Mouse Sensitivity"

[node name="sensitivity" type="HSlider" parent="options_menu"]
margin_left = 5.0
margin_top = 147.0
margin_right = 295.0
margin_bottom = 247.0
max_value = 4.0
step = 0.001
value = 0.1

[node name="vsync" type="CheckButton" parent="options_menu"]
margin_left = 14.0
margin_top = 245.0
margin_right = 309.0
margin_bottom = 289.0
rect_scale = Vector2( 0.913969, 0.953027 )
custom_fonts/font = SubResource( 8 )
text = "V-Sync                    "

[node name="debug" type="CheckButton" parent="options_menu"]
margin_left = 19.0
margin_top = 469.0
margin_right = 314.0
margin_bottom = 513.0
rect_scale = Vector2( 0.913969, 0.953027 )
custom_fonts/font = SubResource( 8 )
text = "Debug-display  "

[node name="back" type="Button" parent="options_menu"]
margin_left = 51.0
margin_top = 544.0
margin_right = 92.0
margin_bottom = 564.0
rect_scale = Vector2( 4.75781, 2.44383 )
text = "back"

[node name="full_screen" type="Button" parent="options_menu"]
margin_left = 22.0
margin_top = 304.0
margin_right = 104.0
margin_bottom = 324.0
rect_scale = Vector2( 3.06486, 1.91004 )
text = "Full Screen"
